--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19",
     "react-dom": "^19",
     "react-use-measure": "^2.1.7",
+    "resend": "^6.4.0",
     "sanity": "^4.2.0"
   },
   "devDependencies": {
